# volo-boot

./: .gitignore  Cargo.toml  Justfile  README.md  docker-compose-dev.yml  docker-compose.yml  prometheus.yml
api/: Cargo.toml  Dockerfile
api/config/: app_config.toml  appconfig.toml  dev.toml  test.toml
api/src/: app_config.rs  consts.rs  lib.rs  prometheus.rs  router.rs  svc_discover.rs
api/src/controller/: mod.rs  order_controller.rs  user_controller.rs
common/: .gitignore  Cargo.toml
common/config/: log4rs.yml
common/src/: lib.rs  load_config.rs  logger.rs
common/src/svc/: mod.rs  nacos.rs
data/nacos_db/: log_1
logs/: app.log.2025-04-21
rpc/order/: Cargo.toml  Dockerfile
rpc/order/config/: app_config.toml  dev.toml  test.toml
rpc/order/idl/: order.proto
rpc/order/src/: app_config.rs  lib.rs
rpc/order/volo-gen/: Cargo.toml  build.rs  volo.yml
rpc/user/: Cargo.toml  Dockerfile
rpc/user/config/: app_config.toml  test.toml
rpc/user/idl/: user.proto
rpc/user/src/: lib.rs
rpc/user/volo-gen/: Cargo.toml
tests/: filter_trace_logs.fish  http_test.fish  main.py
tests/locust/: pyproject.toml  test.fish
volo-observe/: Cargo.toml
volo-observe/src/: lib.rs  logging.rs  metric.rs  trace.rs
