[workspace]
members = ["api", "common", "rpc/user", "rpc/order", "volo-observe"]
resolver = "3"

[workspace.package]
edition = "2024"


[workspace.dependencies]
# 框架相关依赖
volo = "*"
volo-build = "*"
volo-grpc = "*"
volo-http = { version = "*", features = ["default_server"] }
pilota = "*"

# 常用依赖
anyhow = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tracing = "0.1"
clap = { version = "4.5", features = ["default", "derive"] }
async-broadcast = "0.7"
metrics = { version = "0.24", default-features = false }
metrics-exporter-prometheus = { version = "0.16", default-features = false }
chrono = "0.4"

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
