[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# we recommend to use the latest framework version for new features and bug fixes
volo = "*"
volo-http = { version = "*", features = ["default_server"] }
tracing = "0.1"

tokio = { version = "1", features = ["full"] }

common = {path = "../common"}
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
