[package]
name = "api"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 框架依赖
volo.workspace = true
volo-http.workspace = true

# 常用依赖
tracing.workspace = true
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
async-broadcast.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true

# 项目内部依赖
common = { path = "../common" }
user = { path = "../rpc/user" }
order = { path = "../rpc/order" }
volo-observe = { path = "../volo-observe" }

