[package]
name = "common"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["default", "env-filter", "fmt", "chrono", "time", "local-time"] }
atty = "0.2"  # 用于检测终端是否支持 ANSI 颜色
toml="0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
nacos-sdk = { version = "0.5", features = ["default"] }
local-ip-address = "0.6.3"
dashmap = { version = "6.1", features = ["serde"] }
