[package]
name = "common"
version = "0.1.0"
edition.workspace = true

[lib]

[dependencies]
tracing.workspace = true
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = [
    "default",
    "env-filter",
    "fmt",
    "chrono",
    "time",
    "local-time",
] }
atty = "0.2" # 用于检测终端是否支持 ANSI 颜色
toml = "0.8"
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
nacos-sdk = { version = "0.5", features = ["default"] }
local-ip-address = "0.6.3"
dashmap = { version = "6.1", features = ["serde"] }
opentelemetry = { version = "0.20", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.13", features = ["trace", "tonic"] }
tracing-opentelemetry = "0.21"
