[package]
name = "user"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
user-volo-gen = { path = "./volo-gen" }

volo.workspace = true
volo-grpc.workspace = true
tokio.workspace = true
anyhow.workspace = true

# 其他依赖
tracing.workspace = true
common = { path = "../../common" }
serde.workspace = true
clap.workspace = true

volo-observe = { path = "../../volo-observe" }