[package]
name = "user-volo-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volo.workspace = true
volo-grpc.workspace = true
pilota.workspace = true

anyhow.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["full"] }
serde = { version = "1", features = ["derive"] }

[build-dependencies]
volo-build.workspace = true
pilota = "*"
